tests/outref/TAS01.ref

-- TAS01 : Issue syntax error for empty ARRAY constructor

SELECT ARRAY();

LINE 1: SELECT ARRAY();
                     ^
syntax error, unexpected RIGHT_PAREN
